--- a/spel/Makefile
+++ b/spel/Makefile
@@ -117,24 +117,24 @@ depend:
 .PHONY : depend
 
 #=============================================================================
-# Target rules for targets named game
+# Target rules for targets named sfml
 
 # Build rule for target.
-game: cmake_check_build_system
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 game
-.PHONY : game
+sfml: cmake_check_build_system
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/Makefile2 sfml
+.PHONY : sfml
 
 # fast build rule for target.
-game/fast:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/game.dir/build.make CMakeFiles/game.dir/build
-.PHONY : game/fast
+sfml/fast:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/sfml.dir/build.make CMakeFiles/sfml.dir/build
+.PHONY : sfml/fast
 
 game.o: game.cc.o
 .PHONY : game.o
 
 # target to build an object file
 game.cc.o:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/game.dir/build.make CMakeFiles/game.dir/game.cc.o
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/sfml.dir/build.make CMakeFiles/sfml.dir/game.cc.o
 .PHONY : game.cc.o
 
 game.i: game.cc.i
@@ -142,7 +142,7 @@ game.i: game.cc.i
 
 # target to preprocess a source file
 game.cc.i:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/game.dir/build.make CMakeFiles/game.dir/game.cc.i
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/sfml.dir/build.make CMakeFiles/sfml.dir/game.cc.i
 .PHONY : game.cc.i
 
 game.s: game.cc.s
@@ -150,8 +150,32 @@ game.s: game.cc.s
 
 # target to generate assembly for a file
 game.cc.s:
-	$(MAKE) $(MAKESILENT) -f CMakeFiles/game.dir/build.make CMakeFiles/game.dir/game.cc.s
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/sfml.dir/build.make CMakeFiles/sfml.dir/game.cc.s
 .PHONY : game.cc.s
+
+world.o: world.cc.o
+.PHONY : world.o
+
+# target to build an object file
+world.cc.o:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/sfml.dir/build.make CMakeFiles/sfml.dir/world.cc.o
+.PHONY : world.cc.o
+
+world.i: world.cc.i
+.PHONY : world.i
+
+# target to preprocess a source file
+world.cc.i:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/sfml.dir/build.make CMakeFiles/sfml.dir/world.cc.i
+.PHONY : world.cc.i
+
+world.s: world.cc.s
+.PHONY : world.s
+
+# target to generate assembly for a file
+world.cc.s:
+	$(MAKE) $(MAKESILENT) -f CMakeFiles/sfml.dir/build.make CMakeFiles/sfml.dir/world.cc.s
+.PHONY : world.cc.s
 
 # Help Target
 help:
@@ -161,10 +185,13 @@ help:
 	@echo "... depend"
 	@echo "... edit_cache"
 	@echo "... rebuild_cache"
-	@echo "... game"
+	@echo "... sfml"
 	@echo "... game.o"
 	@echo "... game.i"
 	@echo "... game.s"
+	@echo "... world.o"
+	@echo "... world.i"
+	@echo "... world.s"
 .PHONY : help
 
 
